fix bugs with visibile board under Home work, and admin window

--- a/gulp/src/scss/_board-theme.scss
+++ b/gulp/src/scss/_board-theme.scss
@@ -3,7 +3,9 @@
     background-color: $light-gray;
     padding: rem(35) rem(0) rem(0);
 }
-
+.main-wrapper {
+    width: 100%;
+}
 .post-wrapper {
     margin: auto;
     background: $light-gray;
